Added Vet List and updated controller. Closes #27

--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="//http:www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>List of Vets</title>
 </head>
 <body>
-<h1 th:text="'List of Vets'">List of vets.........</h1>
+<h1 th:text="'List of Vets'">"List of Owners"</h1>
 </body>
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Second Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet:${vets}">
+        <td th:text="${vet.id}"></td>
+        <td th:text="${vet.firstname}"></td>
+        <td th:text="${vet.lastname}"></td>
+    </tr>
+    </tbody>
+</table>
+
 </html>
