--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="//http:www.thymeleaf.org">
+<html lang="en" xmlns:th="//http:www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>List of Pet Owners</title>
 </head>
 <body>
-<h1 th:text="'List of Owners'">"List of Owners"</h1>
-</body>
-<table>
+<h2 th:text="'List of Owners'">"List of Owners"</h2>
+
+<table class="table table-striped">
     <thead>
     <tr>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Second Name</th>
+        <th style="width: 150px;">Id</th>
+        <th style="width: 150px;">First Name</th>
+        <th style="width: 150px;">Second Name</th>
     </tr>
     </thead>
     <tbody>
@@ -23,5 +23,5 @@
     </tr>
     </tbody>
 </table>
-
+</body>
 </html>
