added add visit. Closes #61

--- a/pet-clinic-web/src/main/resources/templates/fragments/layout.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/layout.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html th:fragment="layout (template, menu)">
+<!doctype>
+<html th:fragment="layout (template, menu)" xmlns:th="http://www.thymeleaf.org">
 
   <head>
 
