--- a/pet-clinic-web/src/main/resources/templates/pets/createOrUpdatePetForm.html
+++ b/pet-clinic-web/src/main/resources/templates/pets/createOrUpdatePetForm.html
@@ -20,8 +20,8 @@
                 th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}" />
         <input
                 th:replace="~{fragments/inputField :: input ('Birth Date', 'birthDate', 'date')}" />
-        <input
-                th:replace="~{fragments/selectField :: select ('Type', 'petType', ${types})}" />
+       <!-- <input
+                th:replace="~{fragments/selectField :: select ('Type', 'petType', ${types})}" />-->
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
